--- a/flipkart.css
+++ b/flipkart.css
@@ -51,6 +51,7 @@ header{
     position: sticky;
     top: 0;
     margin: 20px;
+    padding: 10px;
     background-color: rgb(255,255,255);
 }
 .first-part{
@@ -355,4 +356,11 @@ input{
     /* transition: transform 1s; */
     width: 20px;
     /* background-color: transparent; */
+}
+ .items img:hover{
+    transform: scale(1.1);
+
+}
+.mobile img:hover{
+    transform: scale(1.05);
 }
